--- a/search-page-style.css
+++ b/search-page-style.css
@@ -57,6 +57,10 @@ li {
 
 /* Logo and blocks to set width in order to center all items*/
 
+body {
+    overflow: hidden;
+   }
+   
 .logo {
 display: block;
 margin: 0 auto;
